Added image folder

--- a/ice-cream.html
+++ b/ice-cream.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <nav id="navbar">
-        <div class="logo"><img src="ice3.png" width="70px" height="70px"></div>
+        <div class="logo"><img src="images/ice3.png" width="70px" height="70px"></div>
 <ul>
     <li class="item"><a href="">Home</a></li>
     <li class="item"><a href="">About</a></li>
@@ -46,7 +46,7 @@
    <div class="box-container">
     <div class="box">
          <div class="image">
-            <img src="vanilla.png" height="200px" width="200px">
+            <img src="images/vanilla.png" height="200px" width="200px">
          </div>
          <div class="content">
             <h3 class="title">Real Vanilla Ice-cream</h3>
@@ -57,7 +57,7 @@
 
     <div class="box">
         <div class="image">
-           <img src="chocolate.png" height="200px" width="200px">
+           <img src="images/chocolate.png" height="200px" width="200px">
         </div>
         <div class="content">
            <h3 class="title">Real Strawbery Ice-cream</h3>
@@ -68,7 +68,7 @@
 
    <div class="box">
     <div class="image">
-       <img src="strawberries.png" height="200px" width="200px">
+       <img src="images/strawberries.png" height="200px" width="200px">
     </div>
     <div class="content">
        <h3 class="title">Real Chocolate Ice-cream</h3>
@@ -79,7 +79,7 @@
 
 <div class="box">
     <div class="image">
-       <img src="citron.png" height="200px" width="200px">
+       <img src="images/citron.png" height="200px" width="200px">
     </div>
     <div class="content">
        <h3 class="title">Real Vanilla Ice-cream</h3>
