--- a/ice-cream.html
+++ b/ice-cream.html
@@ -18,8 +18,8 @@
     <li class="item"><a href="">Home</a></li>
     <li class="item"><a href="">About</a></li>
     <li class="item"><a href="">Menu</a></li>
-    <li class="item"><a href="">Price</a></li>
-    <li class="item"><a href="">Service</a></li>
+    <li class="item"><a href="">Reviews</a></li>
+    <li class="item"><a href="">Order now</a></li>
 <div class="search">
     <input type="text" name="search" id="search">
     <button class="btn"><i class="fa-solid fa-magnifying-glass"></i></button>
@@ -93,13 +93,67 @@
 </div>
 </section>
 
-
 <hr>
-<section id="price">
-<h2 class="h-secondary">Prices</h2>
-<div class="form">
-<form action=""></form>
-</div>
+
+<section class="order" id="order">
+   <h1 class="h-secondary">Order now</h1>
+   <form action="">
+      <div class="box-container">
+         <div class="box">
+            <div class="inputBox">
+               <span>Full name</span>
+         <input type="text" placeholder="enter your name">
+            </div>
+         </div>
+
+         <div class="box">
+            <div class="inputBox">
+               <span>ice-cream name</span>
+         <input type="text" placeholder="ice-cream you want">
+            </div>
+         </div>
+
+         <div class="box">
+            <div class="inputBox">
+               <span>order details</span>
+         <input type="text" placeholder="toppings">
+            </div>
+         </div>
+
+         <div class="box">
+            <div class="inputBox">
+               <span>your address</span>
+         <input type="text" placeholder="enter your address">
+            </div>
+         </div>
+         <div class="box">
+            <div class="inputBox">
+               <span>phone number</span>
+         <input type="number" placeholder="enter your number">
+            </div>
+         </div>
+         <div class="box">
+            <div class="inputBox">
+               <span>quantity</span>
+         <input type="number" placeholder="how much you want">
+            </div>
+         </div>
+         <div class="box">
+            <div class="inputBox">
+               <span>when you want</span>
+         <input type="datetime-local" >
+            </div>
+         </div>
+         <input type="submit" value="order now" class="btn">
+      </div>
+   </form>
+</section>
+<hr>
+<section class="footer">
+   <div class="icon-container">
+      <i class="fa-solid fa-address-book"></i>
+      <h3>address</h3>
+   </div>
 </section>
 </body>
 </html>
