--- a/ice-cream.html
+++ b/ice-cream.html
@@ -102,7 +102,7 @@
 
 <hr>
 
-<section class="wrap">
+<section>
    <div class="container">
       <div class="contact-box">
          <div class="left"></div>
@@ -144,6 +144,7 @@
       <h3>Opening hours</h3>
       <p>monday-friday : 2:00-12:00 <br>
          saturday : 2:00-11:00</p> 
+
       </div>  
 
       <div class="icons">
@@ -159,7 +160,7 @@
       <a href="#"  class="fa-brands fa-instagram"></a>
       <a href="#" class="fa-brands fa-linkedin"></a>
    </div>
-   <div class="credit">created by <span>archana</span> | all right reserved!</div>
+   <div class="credit">@created by <span>archana</span> | all right reserved!</div>
 </section>
 </body>
 </html>
